--- a/Core/Areas/MvcDemos/MvcDemos.csproj
+++ b/Core/Areas/MvcDemos/MvcDemos.csproj
@@ -148,7 +148,6 @@
     <Compile Include="Migrations\201309081230043_GenereNameRequired.Designer.cs">
       <DependentUpon>201309081230043_GenereNameRequired.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\Album.cs" />
     <Compile Include="Models\Artist.cs" />
@@ -166,6 +165,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Samples\FluentValidation\GenreController.cs" />
     <Compile Include="Validators\GenreValidator.cs" />
+    <Compile Include="Validators\LessThanOrEqualToFluentValidationPropertyValidator.cs" />
+    <Compile Include="Validators\NotEqualPropertyValidator.cs" />
     <Compile Include="ViewModels\GenreEditModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -236,6 +237,9 @@
     <Content Include="Content\themes\base\minified\jquery.ui.tooltip.min.css" />
     <Content Include="Global.asax" />
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
+    <Content Include="js\lessThanOrEqualToValidatorAdapter.js" />
+    <Content Include="js\plugins.js" />
+    <Content Include="js\notequalValidatorAdapter.js" />
     <Content Include="packages.config" />
     <Content Include="Scripts\jquery-1.9.1.js" />
     <Content Include="Scripts\jquery-1.9.1.min.js" />
@@ -597,6 +601,9 @@
     <Content Include="Scripts\jquery.globalize\globalize.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
+    <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.validate.js" />
+    <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Web.config" />
