--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,8 @@
     "toastr": "^2.1.1",
     "angular-animate": "^1.4.5",
     "angular-bootstrap": "~0.14.3",
-    "angular-strap": "~2.3.6"
+    "angular-strap": "~2.3.6",
+    "angular-input-masks": "~2.1.1"
   },
   "resolutions": {
     "angular": "1.3.17"
